2011-04-17  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12420]
	* sysdeps/unix/sysv/linux/x86_64/getcontext.S: Reload context after
	storing it.
	* stdlib/bug-getcontext.c: New file.
	* stdlib/Makefile: Add rules to build and run bug-getcontext.

2011-04-13  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/s390/s390-64/utf16-utf32-z9.c: Wrap the z9-109
	instructions into .machine "z9-109".
	* sysdeps/s390/s390-64/utf8-utf16-z9.c: Likewise.
	* sysdeps/s390/s390-64/utf8-utf32-z9.c: Likewise.

2011-04-11  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/s390/s390-32/elf/start.S (_start): Skip extra zeroes
	between environment variables and auxiliary vector.

2011-04-16  Ulrich Drepper  <drepper@gmail.com>

	* Makefile: Add rules to build linkobj/libc.so.
	* include/libc-symbols.h: Define libc_hidden_nolink.
	* include/rpc/auth.h: Mark functions which are to be hidden.
	* include/rpc/auth_des.h: Likewise.
	* include/rpc/auth_unix.h: Likewise.
	* include/rpc/clnt.h: Likewise.
	* include/rpc/des_crypt.h: Likewise.
	* include/rpc/key_prot.h: Likewise.
	* include/rpc/pmap_clnt.h: Likewise.
	* include/rpc/pmap_prot.h: Likewise.
	* include/rpc/pmap_rmt.h: Likewise.
	* include/rpc/rpc_msg.h: Likewise.
	* include/rpc/svc.h: Likewise.
	* include/rpc/svc_auth.h: Likewise.
	* include/rpc/xdr.h: Likewise.
	* nis/Makefile: Link all DSOs against linkobj/libc.so.
	* nss/Makefile: Likewise.
	* sunrpc/Makefile: Don't install headers.  Build library with normal
	entry points.  Don't build rpcinfo.  Link RPC tests appropriately.
	* sunrpc/auth_des.c: Hide exported symbols by default, export some
	for the compat linking library.  Remove use of INTDEF/INTUSE.
	* sunrpc/auth_none.c: Likewise.
	* sunrpc/auth_unix.c: Likewise.
	* sunrpc/authdes_prot.c: Likewise.
	* sunrpc/authuxprot.c: Likewise.
	* sunrpc/clnt_gen.c: Likewise.
	* sunrpc/clnt_perr.c: Likewise.
	* sunrpc/clnt_raw.c: Likewise.
	* sunrpc/clnt_simp.c: Likewise.
	* sunrpc/clnt_tcp.c: Likewise.